0.8.8 release scheme to schema renaming (API change) ConfigEvent (API addition, as planned) improvements in file format handling and CLI JSON-LD additions bugfixes and dependency updates